first working NTLMv2 authentication