@@ -11,9 +11,11 @@ import javax.security.sasl.Sasl;
 import javax.security.sasl.SaslClient;
 import javax.security.sasl.SaslException;
 import java.lang.foreign.MemorySegment;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.Map;
 
+// to be run with `--add-reads org.cryptomator.jsmb=java.security.sasl`
 class AuthenticatorTest {
 
 	// test case from https://learn.microsoft.com/en-us/openspecs/windows_protocols/ms-nlmp/7795bd0e-fd5e-43ec-bd9c-994704d8ee26
@@ -28,8 +30,24 @@ class AuthenticatorTest {
 	}
 
 	@Test
+	@DisplayName("test authentication")
+	public void testNtlmV2Auth() {
+		Authenticator authenticator = Authenticator.create("User", "Password", "Domain");
+		// test case from https://learn.microsoft.com/en-us/openspecs/windows_protocols/ms-nlmp/bc612491-fb0b-4829-91bc-7c6b95ff67fe
+		var challenge = new NtlmChallengeMessage(MemorySegment.ofArray(Base64.getDecoder().decode("TlRMTVNTUAACAAAADAAMADgAAAAzgoriASNFZ4mrze8AAAAAAAAAACQAJABEAAAABgBwFwAAAA9TAGUAcgB2AGUAcgACAAwARABvAG0AYQBpAG4AAQAMAFMAZQByAHYAZQByAAAAAAA=")));
+		var auth = new NtlmAuthenticateMessage(MemorySegment.ofArray(Base64.getDecoder().decode("TlRMTVNTUAADAAAAGAAYAGwAAABUAFQAhAAAAAwADABIAAAACAAIAFQAAAAQABAAXAAAABAAEADYAAAANYKI4gUBKAoAAAAPRABvAG0AYQBpAG4AVQBzAGUAcgBDAE8ATQBQAFUAVABFAFIAhsNQl6yc7BAlVHZKV8zMGaqqqqqqqqqqaM0KuFHlHJaqvJJ76+9qHAEBAAAAAAAAAAAAAAAAAACqqqqqqqqqqgAAAAACAAwARABvAG0AYQBpAG4AAQAMAFMAZQByAHYAZQByAAAAAAAAAAAAxdrSVE/JeZCUzhzpC8nQPg==")));
+
+		var response = Assertions.assertDoesNotThrow(() -> authenticator.ntlmV2Auth(challenge, auth));
+
+		// see https://learn.microsoft.com/en-us/openspecs/windows_protocols/ms-nlmp/daefb605-78d5-4657-a3a0-b9ad11281d07
+		Assertions.assertArrayEquals(Base64.getDecoder().decode("hsNQl6yc7BAlVHZKV8zMGaqqqqqqqqqq"), response.lmChallengeResponse());
+		Assertions.assertArrayEquals(Base64.getDecoder().decode("aM0KuFHlHJaqvJJ76+9qHA=="), Arrays.copyOf(response.ntChallengeResponse(), 16));
+		Assertions.assertArrayEquals(Base64.getDecoder().decode("jeQMytvBSoLxXLCtDelcow=="), response.sessionBaseKey());
+	}
+
+	@Test
 	@DisplayName("test message processing with JDK SaslClient")
-	public void testNtlmMessageProcessing() throws SaslException {
+	public void testNtlmMessageProcessing() throws SaslException, AuthenticationFailedException {
 		Map<String, ?> props = Map.of(
 				Sasl.POLICY_NOPLAINTEXT, "true",
 				"com.sun.security.sasl.ntlm.version", "LMv2/NTLMv2",
@@ -40,12 +58,12 @@ class AuthenticatorTest {
 				switch (callback) {
 					case PasswordCallback pc -> pc.setPassword("password".toCharArray());
 					case NameCallback nc -> nc.setName("user");
-					case RealmCallback rc -> rc.setText("smb");
+					case RealmCallback rc -> rc.setText("localhost");
 					default -> throw new UnsupportedCallbackException(callback);
 				}
 			}
 		};
-		SaslClient sc = Sasl.createSaslClient(new String[]{"NTLM"}, "user", "smb", "localhost", props, callbackHandler);
+		SaslClient sc = Sasl.createSaslClient(new String[]{"NTLM"}, "user", "jsmb", "localhost", props, callbackHandler);
 		// SaslServer ss = Sasl.createSaslServer("NTLM", null, null, props, callbackHandler);
 		Authenticator authenticator = Authenticator.create("user", "password", "localhost");
 
